mvp is complete

--- a/index.html
+++ b/index.html
@@ -29,12 +29,19 @@
       </nav>
     </div>
   </header>
+
+
+
+  
      
   <div class="container home">
     <header class="intro">
       <img src="img/fun-bus.jpg" alt="bus in the sand">
+
+   
+
       <h2>Welcome To Fun Bus!</h2>
-      <p>Traveling expedition modern, clean webdesign blogger clean website theme website modern. Design pretty design, travelblogger adventure WordPress wanderlust theme blogger website expedition theme travelblogger. Adventure fun traveler pretty design website expedition.</p>
+      <p id="noContextMenu">Traveling expedition modern, clean webdesign blogger clean website theme website modern. Design pretty design, travelblogger adventure WordPress wanderlust theme blogger website expedition theme travelblogger. Adventure fun traveler pretty design website expedition.</p>
     </header>
     <section class="content-section">
       <div class="text-content">
@@ -59,6 +66,7 @@
     </section>
     <section class="content-destination">
       <h2>Pick Your Destination</h2>
+      Enter Your Destination <input type="text" id="bigName">
       <p>Expedition excursion design darn excursion fun, clean simple organized WordPress Travel colorful webdesign. Traveler blogger website design expedition clean excursion traveling.</p>
       <img src="img/destination.jpg" alt="Second slide">
     </section>
@@ -80,10 +88,40 @@
         <div class="btn">Sign Me Up!</div>
       </div>
     </section>
+
+<div>
+  <h2>Sign Up For Our NewsLetter!</h2>  
+    <form>
+      <input type="text" placeholder="Email"></input>
+      <input type="password" placeholder ="Password"></input>
+
+    </form>
+</div>
+
+    <button><h1>Fun Bus!!!</h1></button>
+
+  <div>
+    <h4>Draw Us A Picture Before You Go!</h4>
+    <canvas id="myPics" width="560" height="360"></canvas>
+  </div>
+
+  <div id="boxForStopProp">
+<button id="myBtn">Clicky Here</button>
+  </div>
+
+
+
+
+    
   </div><!-- container -->
 
   <footer class="footer">
     <p>Copyright Fun Bus 2018</p>
+    <ul id="footerList">
+      <li>Written by Fun Bus Inc.</li>
+      <li>In Association With Joe Idelson</li>
+      <li>Thank You Lambda</li>
+    </ul>
   </footer>
 
 </body>
